# investory

./: .gitignore  README.org  costbasis.py  pyproject.toml  setup.cfg  setup.py
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/api/: costbasis.rst  investory.rst  modules.rst
examples/values/: EURUSD.ledger  IRBR3.ledger
investory/: costbasis.py  values.py
tests/: test_costbasis.py
tests/transactions_examples/: test1.csv  test2.csv  test3.csv  test3.out.csv  test4.csv  test4.out.csv  test5.csv  test6.csv
